kubernetes/ingress-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    name: app1
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    name: app2
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
